--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href=""><img src="../img/Group 1.png" alt="">МОЙ НЕ САМ</a>
+        <a href=""><img src="./img/Group 1.png" alt="">МОЙ НЕ САМ</a>
         <nav>
             <ul>
                 <li><a href="">Административная панель</a></li>
@@ -33,14 +33,14 @@
                 <a href="" class="button">Заявка</a>
             </div>
         </div>
-        <img src="../img/right.png" alt="">
+        <img src="./img/right.png" alt="">
     </main>
 
 
     <footer>
         <span> </span>
         <p>Всё права защищены</p>
-        <a href=""><img src="../img/Group 1.png" alt="">МОЙ НЕ САМ</a>
+        <a href=""><img src="./img/Group 1.png" alt="">МОЙ НЕ САМ</a>
     </footer>
 </body>
 
